Update print statement from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <button class="roleBtn elif" id="pickElif">
             <div class="avatar-frame">
                 <img 
-                   src="BURAYA_RESIM_LINKINI_YAPISTIR" 
+                   src="https://i.hizliresim.com/9fc0u1h.jpg" 
                    class="avatar-img" 
                    onerror="this.src='https://i.pinimg.com/736x/0a/8e/13/0a8e1300735620547491478878808806.jpg'"
                 >
