--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>ELIF & EMIR • Private Space</title>
   <style>
     :root{
-      /* Tasarım Renkleri */
+      /* Tasarım Renkleri (Dark/Luxe Theme) */
       --bg:#000000; 
       --card: #111111; 
       --line: #333333;
       --text:#ffffff; 
       --muted:#888888; 
-      --good:#10b981; 
-      --bad:#ef4444;
-      --accent: #db2777; 
+      --good:#10b981; /* Yeşil */
+      --bad:#ef4444;  /* Kırmızı */
+      --accent: #db2777; /* Pembe */
       --r:16px;
     }
     *{box-sizing:border-box}
@@ -258,7 +258,7 @@
       <div class="grid2">
         <button class="roleBtn emir" id="pickEmir">
             <div class="avatar-frame">
-                <img src="https://images.unsplash.com/photo-1506794778202-cad84cf45f1d?auto=format&fit=crop&w=300&q=80" class="avatar-img">
+                <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?auto=format&fit=crop&w=300&q=80" class="avatar-img">
             </div>
             <b>EMİR</b>
             <span>"Aşık"</span>
@@ -266,11 +266,7 @@
 
         <button class="roleBtn elif" id="pickElif">
             <div class="avatar-frame">
-                <img 
-                   src="https://i.hizliresim.com/9fc0u1h.jpg" 
-                   class="avatar-img" 
-                   onerror="this.src='https://i.pinimg.com/736x/0a/8e/13/0a8e1300735620547491478878808806.jpg'"
-                >
+                <img src="https://images.unsplash.com/photo-1597223557154-721c1ce78663?auto=format&fit=crop&w=300&q=80" class="avatar-img">
             </div>
             <b>ELİF</b>
             <span>"Prenses"</span>
