--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
     function fmtTime(ts){ return new Date(ts).toLocaleTimeString("tr-TR", {hour:'2-digit', minute:'2-digit'}); }
 
     // ----- ŞİFRE SİSTEMİ -----
-    const PASSWORDS = { "Emir": "65", "Elif": "1938" };
+    const PASSWORDS = { "Emir": "615127", "Elif": "6161221" };
     let selectedRole = null;
 
     function viewer(){ return localStorage.getItem("viewerName") || ""; }
@@ -637,4 +637,5 @@
   </script>
 </body>
 </html>
+
 
